--- a/src/layout/Navigation.module.css
+++ b/src/layout/Navigation.module.css
@@ -13,7 +13,8 @@
     margin-right: 75px;
     padding: 0;
     display: flex;
-    align-items: baseline;
+    align-items: center; 
+    justify-content: center; 
 }
 
 .header li
