--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -57,6 +57,14 @@
     margin-bottom: 10px;
     justify-content: center;
     align-items: center;
+    transition: transform 0.2s, background-color 0.2s, color 0.2s;
+}
+
+.btn:hover
+{
+    transform: scale(1.15);
+    background-color: gray;
+    color: white;
 }
 
 /* Large devices (desktops, 1200px and up) */
