--- a/src/pages/Footer.module.css
+++ b/src/pages/Footer.module.css
@@ -63,6 +63,13 @@
     margin-top: 0px;
     justify-content: center;
     align-items: center;
+    transition: transform 0.2s, background-color 0.2s, color 0.2s;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+    background-color: gray;
+    color: white;
 }
 
 /* Large devices (desktops, 1200px and up) */
