--- a/src/pages/Invest.module.css
+++ b/src/pages/Invest.module.css
@@ -91,6 +91,13 @@
     margin-bottom: 10px;
     justify-content: center;
     align-items: center;
+    transition: transform 0.2s, background-color 0.2s, color 0.2s;
+}
+
+.btn:hover {
+    transform: scale(1.15);
+    background-color: gray;
+    color: white;
 }
 
 /* Medium devices (desktops, 992px and up) */
