--- a/src/pages/Menu.module.css
+++ b/src/pages/Menu.module.css
@@ -20,21 +20,27 @@
     margin-left: 75px;
 }
 
-.btn
-{
+.btn {
     background-color: #ffcb08;
     color: black;
-    width: 230px;
-    height: 70px;
+    width: 240px;
+    height: 60px;
     display: flex;
     text-align: center;
     text-decoration: none;
     font-size: 20px;
     border: none;
-    border-radius: 100px;
-    margin-top: 20px;
+    border-radius: 10px;
+    margin-top: 0px;
     justify-content: center;
     align-items: center;
+    transition: transform 0.2s, background-color 0.2s, color 0.2s;
+}
+
+.btn:hover {
+    transform: scale(1.15);
+    background-color: gray;
+    color: white;
 }
 
 .section
