--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -7,15 +7,14 @@
 {
     margin-left: 75px;
     margin-right: 75px;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .h
 {
     display: flex;
     justify-content: center;
-    margin: 30px;
-    font-size: 24px;
+    margin: 30px
 }
 
 .section
@@ -26,19 +25,16 @@
 .form
 {
     margin-top: 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    text-align: center;
 }
 
 .input 
 {
     border: 1px solid #ccc;
-    border-radius: 15px;
-    height: 50px;
-    width: 800px;
-    margin-bottom: 10px;
-    padding-left: 20px;
+    border-radius: 10px;
+    height: 40px;
+    width: 300px;
+    margin-bottom: 3px;
 }
 
 .btn
@@ -47,7 +43,6 @@
     color: black;
     width: 200px;
     height: 50px;
-    display: flex;
     text-align: center;
     text-decoration: none;
     font-size: 20px;
@@ -67,6 +62,14 @@
     color: white;
 }
 
+.inputsContainer {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 5px;
+    justify-items: center;
+    width: 100%;
+}
+
 /* Large devices (desktops, 1200px and up) */
 @media (min-width: 1200px) {
     .par {
@@ -74,6 +77,10 @@
     }
     .input {
         width: 300px;
+    }
+    .inputsContainer {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 7px;
     }
 }
 
@@ -84,6 +91,10 @@
     }
     .input {
         width: 280px;
+    }
+    .inputsContainer {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 3px;
     }
 }
 
