--- a/src/pages/Footer.module.css
+++ b/src/pages/Footer.module.css
@@ -128,34 +128,40 @@
     .footer {
         padding: 20px 20px;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
     }
     .footerContent {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
     }
     .logo {
         width: 120px;
         margin-bottom: 20px;
     }
     .subscribeContainer {
-        text-align: left;
+        text-align: center;
         height: auto;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     .subscribeContainer h2 {
         margin-right: 0;
         margin-bottom: 10px;
+        text-align: center;
     }
     .formContainer {
-        flex-direction: column;
-        align-items: flex-start;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%; 
     }
     .emailInput {
-        margin-right: 0;
-        margin-bottom: 10px;
-        width: 100%;
+        margin-right: 10px; 
+        width: auto;
     }
     .btn {
-        width: 100%;
+        width: auto; 
     }
 }
