--- a/src/pages/Menu.module.css
+++ b/src/pages/Menu.module.css
@@ -69,8 +69,8 @@
 
 .imageBox
 {
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     position: relative;
 }
 
@@ -102,7 +102,6 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    position: absolute;
 }
 
 .imageSubtitle
@@ -158,7 +157,7 @@
     }
 
     .btn {
-        width: auto;
+        width: 150px;
         height: auto;
         font-size: 12px;
         padding: 4px 8px;
@@ -180,7 +179,7 @@
     .imageContainer {
         grid-template-columns: repeat(2, 1fr); 
         gap: 15px; 
-        order: -1;
+        order: 1;
     }
 
     .imageBox {
@@ -189,15 +188,21 @@
     }
 
     .imageText {
-        font-size: 14px;
+        font-size: 24px;
+        margin-bottom: 0px;
     }
 
     .imageSubtitle {
-        font-size: 8px;
+        margin-top: 0px; 
+        font-size: 11px;
     }
 
     .imageContainersec {
         display: none;
+    }
+
+    .section > div {
+        margin-bottom: 5px;
     }
 }
 
@@ -221,7 +226,6 @@
         flex-direction: column;
         height: auto;
         padding: 20px;
-        text-align: center;
     }
 
     .section h1, .sectionsec h1 {
@@ -232,7 +236,7 @@
     .imageContainer {
         grid-template-columns: repeat(2, 1fr); 
         gap: 15px;
-        order: -1;
+        order: 1;
     }
 
     .imageBox {
@@ -241,14 +245,18 @@
     }
 
     .imageText {
-        font-size: 16px;
+        font-size: 35px;
     }
 
     .imageSubtitle {
-        font-size: 10px;
+        font-size: 17px;
     }
 
     .imageContainersec {
         display: none;
+    }
+
+    .section > div {
+        margin-bottom: 5px;
     }
 }
